# ML_Reconstruction

./: .gitignore  LICENSE  README.md  colab_install_environment.sh  colab_run_grid.py  config.yaml  pyproject.toml  requirements.txt  run_create_gaussian_mask.py  run_create_mask.py  run_experiment.py  run_experiment_main_pipeline_script.py  run_filter_points.py  run_filter_points_improve.py  run_test.py  script.sh  test_env.py  view_patches.py
slurm/: eval_grid.slurm  preprocess.slurm  submit_slurm.sh  train_grid.slurm
src/trackrecon/createmasks/: auto_detect_points.py  create_gaussian_mask.py  create_mask.py  crop_volume.py  filter_points.py  filter_points_advance.py  load_data.py  loadinfile.py  review_points.py
src/trackrecon/inference/: calculate_precision_recall.py  classification.py  convert_prediction_to_points.py  metrics.py  postprocess.py  predict_full.py  predict_full_volume.py  visualize.py
src/trackrecon/models/: device_m1_support.py  forword_ex.py  loss_fun.py  model_3dunet.py  unet3d.py  unet_ex.py
src/trackrecon/patching/: dataset.py  dataset_force.py  dataset_multivolume.py  pathchgenerator.py
src/trackrecon/scripts/: AUTOSELECTBESTLR.py  UPDATE_CONFIG.py  background_suppression.py  build_summary.py  check_plot.py  evaluate_81_combinations.py  evaluate_grid.py  file_utils.py  job.slurm  lr_utils.py  noise_reduction.py  parameters_need_to_scan_optimise.txt  plot_script.py  plot_utils.py  run_train.py  submit_9_training_jobs.py  submit_jobs.sh  submitscript.sh  train_grid.py
src/trackrecon/training/: train.py  train_model.py
